--- a/IIFYM_Tracker/src/main/res/layout/activity_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_home.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentBottom="true"
         app:elevation="3dp"
         app:fabSize="normal"
-        app:srcCompat="@drawable/icon_adddailyitem"
+        app:srcCompat="@drawable/ic_add_daily_item"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         app:rippleColor="?attr/colorButtonNormal" />
@@ -92,7 +92,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/icon_calories"
+                app:srcCompat="@drawable/ic_calories"
                 android:paddingRight="2.5dp"
                 android:paddingTop="5dp"
                 android:layout_weight="0.20" />
@@ -176,7 +176,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/icon_carbs"
+                app:srcCompat="@drawable/ic_carbs"
                 android:layout_weight="0.2" />
 
             <LinearLayout
@@ -259,7 +259,7 @@
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/icon_protein"
+                app:srcCompat="@drawable/ic_protein"
                 android:layout_weight="0.2" />
 
             <LinearLayout
@@ -340,7 +340,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/icon_fat"
+                app:srcCompat="@drawable/ic_fat"
                 android:layout_weight="0.2" />
 
             <LinearLayout
