--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
@@ -112,7 +112,7 @@
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:layout_width="25dp"
-                        app:srcCompat="@drawable/icon_info"
+                        app:srcCompat="@drawable/ic_info"
                         android:layout_height="25dp" />
                 </RelativeLayout>
 
@@ -351,7 +351,7 @@
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     app:fabSize="mini"
-                    app:srcCompat="@drawable/icon_edit_macros"
+                    app:srcCompat="@drawable/ic_edit"
                     android:id="@+id/fabEditMacros"
                     app:backgroundTint="?attr/colorPrimary"
                     tools:fab_image_size="25dp"
