--- a/IIFYM_Tracker/src/main/res/menu/menu_home_man.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_home_man.xml
@@ -9,18 +9,18 @@
         android:orderInCategory="100"
         android:title="@string/Macro_settings"
         app:showAsAction="always"
-        android:icon="@drawable/icon_macrosettings"
+        android:icon="@drawable/ic_macro_settings"
         />
     <item
         android:id="@+id/action_MealSettings"
         android:orderInCategory="100"
         android:title="@string/Meal_settings"
         app:showAsAction="always"
-        android:icon="@drawable/icon_mealsettings"
+        android:icon="@drawable/ic_meal_settings"
         />
     <item android:title="Profile"
         android:id="@+id/profile_menu_btn"
         app:showAsAction="always"
-        android:icon="@drawable/icon_user_male"
+        android:icon="@drawable/ic_male_user"
         android:orderInCategory="101" />
 </menu>
