--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.New.activityCreateDailyFood">
+    tools:context=".Activities.Main.New.activitySelectDailyItem">
 
     <LinearLayout
         android:orientation="vertical"
@@ -215,7 +215,8 @@
                 android:maxLength="4"
                 android:ems="3"
                 android:layout_width="45dp"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                />
 
         </LinearLayout>
 
