--- a/IIFYM_Tracker/src/main/res/layout/activity_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityMain"
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityHome"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
