--- a/IIFYM_Tracker/src/main/res/menu/menu_create_food.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_create_food.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityCreateFood">
     <item
-        android:id="@+id/menu_save"
+        android:id="@+id/menu_add"
         android:orderInCategory="100"
         android:title="@string/Macro_settings"
         app:showAsAction="always"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/ic_add"
         />
 </menu>
