--- a/IIFYM_Tracker/src/main/res/layout/list_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/list_item.xml
@@ -35,15 +35,14 @@
             android:textColor="@color/colorPrimary" />
 
         <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="portionDetails"
+            android:text="00.0 Servings"
             android:id="@+id/lblPortionDetails"
             android:layout_alignParentRight="true"
             android:textColor="@color/colorPrimary"
-            android:layout_weight="1"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_width="wrap_content" />
 
     </LinearLayout>
 
