--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -28,7 +28,7 @@
                 android:text="Item Name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView5"
+                android:id="@+id/lblName"
                 android:layout_weight="1"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:textColor="@color/colorPrimary"
@@ -225,26 +225,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Enter"
-                android:id="@+id/Button_Enter"
-                android:layout_weight="1"
-                android:background="@drawable/btn_iifym_style" />
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:id="@+id/Button_Cancel"
-                android:layout_weight="1"
-                android:background="@drawable/btn_iifym_style" />
 
         </LinearLayout>
 
