--- a/IIFYM_Tracker/src/main/res/layout/activity_view_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_daily_item.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:id="@+id/layoutInfo"
             app:layout_constraintLeft_toLeftOf="parent"
