activityAddDailyItem.java and activity_add_daily_item.xml almost finalized.

--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -12,9 +12,9 @@
     <color name="black">#000000</color>
     <color name="black_light">#333</color>
     <color name="grey_light">#A1A1A1</color>
-    <color name="CaloriesProgessColor">#f57c00</color>
-    <color name="CarbProgressColor">#f0c419</color>
-    <color name="ProteinProgessColor">#f44336</color>
+    <color name="CaloriesProgessColor">#EF6C00</color>
+    <color name="CarbProgressColor">#EAC807</color>
+    <color name="ProteinProgessColor">#FF4040</color>
     <color name="FatProgessColor">#66bb6a</color>
     <color name="Progress_Bar_Background">#e0e0e0</color>
     <color name="Transparent">#00ffffff</color>
@@ -34,4 +34,7 @@
     <color name="fabPinkPressed">#ec407a</color>
     <color name="fabBlue">#805677fc</color>
     <color name="fabBluePressed">#80738ffe</color>
+    <!--<color name="CarbProgressColor">#f0c419</color>-->
+    <!--<color name="ProteinProgessColor">#f44336</color>-->
+    <!--<color name="FatProgessColor">#66bb6a</color>-->
 </resources>
