--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -2,236 +2,181 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_view_daily_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.New.activitySelectDailyItem">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityViewDailyItem">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/LinearLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:gravity="center_vertical|center_horizontal|center"
-            android:layout_height="30dp">
+            android:layout_height="wrap_content"
+            android:id="@+id/layoutInfo"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0">
 
-            <TextView
-                android:text="Item Name"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/lblName"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+
+                <TextView
+                    android:text="@string/lblName"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:id="@+id/lblName"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:text="@string/lblBrand"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:id="@+id/lblBrand"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/colorPrimary"/>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="@string/lblCalories"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/lblCalories"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorPrimary" />
+
+                    <TextView
+                        android:text="@string/lblkcal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/lblkcals"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/CaloriesProgessColor" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="@string/lblCarbs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/lblCarbs"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorPrimary"/>
+
+                    <TextView
+                        android:text="@string/lblC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/lblc"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/CarbProgressColor" />
+
+                    <TextView
+                        android:text="@string/lblProtein"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/lblProtein"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorPrimary" />
+
+                    <TextView
+                        android:text="@string/lblp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/lblp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/ProteinProgessColor" />
+
+                    <TextView
+                        android:text="@string/lblFat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/lblFat"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/colorPrimary" />
+
+                    <TextView
+                        android:text="@string/lblf"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/lblf"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/FatProgessColor" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal"
+                        android:ems="4"
+                        android:id="@+id/etxtPortionAmount"
+                        android:layout_weight="1"
+                        android:hint="0000"
+                        android:gravity="center_vertical|center_horizontal|center"
+                        android:textAppearance="@android:style/TextAppearance.Material.Small" />
+
+                    <TextView
+                        android:text="@string/lblPortionType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/lblPortionType"
+                        android:textAlignment="textStart"
+                        android:gravity="center"
+                        android:textColor="@color/colorPrimary"/>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <ListView
             android:layout_width="wrap_content"
-            android:gravity="center_vertical|center_horizontal|center"
-            android:layout_height="25dp">
+            android:layout_height="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/layoutInfo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
+            android:id="@+id/listviewIngredients" />
 
-            <TextView
-                android:text="Brand Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView6"
-                android:layout_weight="1"
-                android:textColor="@color/colorPrimaryDark" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:gravity="center_vertical|center_horizontal|center" >
-
-            <TextView
-                android:text="Calories (kcal):"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView78"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
-                android:layout_width="110dp" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="0000"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView7"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:gravity="center_vertical|center_horizontal|center">
-
-            <TextView
-                android:text="Carbs (g):"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView77"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
-                android:layout_width="110dp" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="0000"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView8"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:gravity="center_vertical|center_horizontal|center" >
-
-            <TextView
-                android:text="Protein (g):"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView99"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
-                android:layout_width="110dp" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="0000"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView9"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:gravity="center_vertical|center_horizontal|center">
-
-            <TextView
-                android:text="Fat (g):"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView778"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="0000"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView88"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical|center_horizontal|center"
-            android:layout_height="45dp">
-
-            <TextView
-                android:text="Weight (g):"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView23"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
-                android:layout_width="110dp" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <EditText
-                android:layout_height="wrap_content"
-                android:id="@+id/EditText_ServingNumber"
-                android:textAlignment="textStart"
-                android:hint="0000"
-                android:inputType="numberDecimal"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColorHint="@color/Custom_Grey"
-                android:maxLength="4"
-                android:ems="3"
-                android:layout_width="45dp"
-                android:textSize="14sp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
