--- a/IIFYM_Tracker/src/main/res/layout/activity_select_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_select_daily_item.xml
@@ -11,44 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activitySelectDailyItem">
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fabAddNew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        fab:fab_addButtonColorNormal="@color/colorPrimary"
-        fab:fab_addButtonColorPressed="@color/fabWhitePressed"
-        fab:fab_addButtonPlusIconColor="@color/fabWhite"
-        fab:fab_labelStyle="@style/menu_labels_style"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        fab:fab_addButtonSize="mini"
-        fab:fab_expandDirection="up">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAddNewFood"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/colorPrimaryLight"
-            fab:fab_title="Add New Food"
-            fab:fab_colorPressed="@color/fabWhitePressed"
-            fab:fab_icon="@drawable/ic_food"
-            fab:fab_size="mini"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAddNewMeal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/colorPrimaryLight"
-            fab:fab_title="Add New Meal"
-            fab:fab_colorPressed="@color/fabWhitePressed"
-            fab:fab_icon="@drawable/ic_meal"
-            fab:fab_size="mini"
-            style="imageButtonStyle"
-            android:scaleType="fitCenter"
-            android:background="@drawable/ic_meal" />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -87,5 +49,43 @@
             tools:layout_editor_absoluteX="0dp"></ListView>
 
     </LinearLayout>
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fabAddNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_addButtonColorNormal="@color/colorPrimary"
+        fab:fab_addButtonColorPressed="@color/fabWhitePressed"
+        fab:fab_addButtonPlusIconColor="@color/fabWhite"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        fab:fab_addButtonSize="mini"
+        fab:fab_expandDirection="up">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddNewFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/colorPrimaryLight"
+            fab:fab_title="@string/toolbarCreateNewFood"
+            fab:fab_colorPressed="@color/fabWhitePressed"
+            fab:fab_icon="@drawable/ic_food"
+            fab:fab_size="mini"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddNewMeal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/colorPrimaryLight"
+            fab:fab_title="@string/lblCreateNewMeal"
+            fab:fab_colorPressed="@color/fabWhitePressed"
+            fab:fab_icon="@drawable/ic_meal"
+            fab:fab_size="mini"
+            style="imageButtonStyle"
+            android:scaleType="fitCenter"
+            android:background="@drawable/ic_meal" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </RelativeLayout>
